# hodlcoin-cardano

./: README.md  cabal.project
.github/: ci.yaml
blog/: 01-setup.md
src/onchain/: hodlcoin-chain.cabal
src/onchain/lib/Hodlcoin/: Contract.hs
