cabal-version: 3.4
name:          hodlcoin-onchain
version:       0.1.0.0
synopsis:      onchain code for hodlcoin
license-file:  LICENSE
license:       Apache-2.0
author:        Jann Müller <j-mueller@users.noreply.github.com>
maintainer:    Jann Müller <j-mueller@users.noreply.github.com>
copyright:     (c) 2024 Jann Müller
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving

  other-extensions:
    ConstrainedClassMethods
    DeriveAnyClass
    ExistentialQuantification
    FlexibleInstances
    GADTs
    MonadComprehensions
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  lib
  
  exposed-modules:
    Hodlcoin.Contract

  build-depends:
    , base
    , plutarch
    , plutus-ledger-api
    , text
    , transformers
    , base16-bytestring

test-suite armadillo-cli-test
  import:           lang
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules: